Fixing bugs,fixing panel view, change logo

--- a/src/app/shared/components/auth/auth/auth.component.html
+++ b/src/app/shared/components/auth/auth/auth.component.html
@@ -3,26 +3,7 @@
   <div class="login login-3 wizard d-flex flex-column flex-lg-row flex-column-fluid">
     <!--begin::Aside-->
     <div class="login-aside d-flex flex-column flex-row-auto">
-      <!--begin::Aside Top-->
-      <div class="d-flex flex-column-auto flex-column pt-lg-1 pt-1">
-        <!--begin::Aside Header-->
-        <a href="#" class="login-logo text-center pt-lg-25 pb-10 display-1">
-          <img src="assets/media/logos/logo-letter-13.svg" width="50px" height="50px" alt=""/>
-          <h3>CRONDATA</h3>
-        </a>
-        <!--end::Aside Header-->
-        <!--begin::Aside Title-->
-        <h3 class="font-weight-bolder text-center font-size-h4 text-dark-50 line-height-xl">
-
-          <br/>Architecture manager</h3>
-        <!--end::Aside Title-->
-      </div>
-      <!--end::Aside Top-->
-      <!--begin::Aside Bottom-->
-      <div class="aside-img d-flex flex-row-fluid bgi-no-repeat bgi-position-x-center"
-           style="background-position-y: calc(100%);
-                 background-image: url(../../../../../assets/img/computer.png)"></div>
-      <!--end::Aside Bottom-->
+      <img src="/assets/img/cron-background.jpg" height="100%" width="100%"/>
     </div>
     <!--begin::Aside-->
     <!--begin::Content-->
